<resources>
    <string name="app_name">ShowArt</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign IN</string>
    <string name="btnSignUP">sign UP</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="firebase_url">https://showart-2e064.firebaseio.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-2368394867191283/5843049053</string>
    <!-- Your Facebook App ID from your app settings on https://dhttps://showart.firebaseio.comevelopers.facebook.com/ -->
    <!-- More details here: https://www.firebase.com/docs/android/guide/login/facebook.html -->
    <string name="facebook_app_id">1607894516175691</string>
    <string name="facebook_app_secret">2e3997e73ef0470e46b4df739428d775</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="areYouArtist">Are You an Artist</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_oeuvredetail_list">itemOeuvres</string>
    <string name="title_oeuvredetail_detail">OeuvreDetail Detail</string>
    <string name="title_itemoeuvre_list">Oeuvres</string>
    <string name="title_itemoeuvre_detail">ItemOeuvre Detail</string>
    <string name="dummy_section_text">hello dummy</string>
    <string name="all_artist">All Artists</string>
    <string name="followers_artist">Followers</string>
    <string name="following_artist">Following</string>
    <string name="name_hint">Name</string>
    <string name="mp_hint">PassWord</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="postal_hint">Adress Postal</string>
    <string name="biblio_hint">Bibliography</string>


    <!-- -
        Artist SRTING
    <!- -->


</resources>
