<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="#ffffff">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:id="@+id/image_editCOmpte"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/one"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_hint"
                android:ems="10"
                android:id="@+id/editText" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Homme"
                    android:id="@+id/radioButton"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:contextClickable="false"
                    android:textSize="20dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="femme"
                    android:id="@+id/radioButton3"
                    android:checked="true"
                    android:textSize="20dp" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Security"
                android:textSize="30dp"
                android:id="@+id/textView2"
                android:textColor="@color/app_color"
                android:layout_marginTop="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email_hint"
                android:id="@+id/email_editCompte" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/mp_hint"
                android:id="@+id/mp_editCompte" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:id="@+id/phone_editCompte" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="General"
                android:textSize="30dp"
                android:id="@+id/textView3"
                android:textColor="@color/app_color"
                android:layout_marginTop="25dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:spinnerMode="dialog" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:hint="@string/postal_hint"
                android:id="@+id/postal_editCompte" />

            <android.inputmethodservice.ExtractEditText
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:hint="@string/biblio_hint"
                android:id="@+id/extractEditText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/button"
                android:background="@color/app_color"
                android:textColor="#ffff"
                android:textSize="30dp" />

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_"
        app:elevation="10dp"
        app:backgroundTint="@color/app_color"
        app:layout_anchor="@id/image_editCOmpte"
        app:layout_anchorGravity="right|bottom|end"
        />
    </android.support.design.widget.CoordinatorLayout>
</FrameLayout>
